--- a/workflow-templates/infrastructure.yml
+++ b/workflow-templates/infrastructure.yml
@@ -37,6 +37,7 @@ jobs:
     needs: Plan
     env:
       TF_IN_AUTOMATION: "1"
+      TF_INPUT: "0"
     if: github.event_name != 'pull_request'
 
     steps:
@@ -59,4 +60,4 @@ jobs:
         run: terraform init
 
       - name: Apply
-        run: terraform apply -auto-approve -input=false
+        run: terraform apply -auto-approve
